Bundles: report save failure to the user

BUG: 439110
(cherry picked from commit 36706060f73f39099f609c96334c7146188c0b4f)